@@ -40,142 +40,12 @@
 #include <stdio.h>
 #include <stdlib.h>
 
-#define NOT_IN_LANG   ((char const*)1)  /* don't print text for current lang */
-#define SAME_AS_C     ((char const*)2)  /* C++ text is the same as C */
-
 /// @endcond
 
-///////////////////////////////////////////////////////////////////////////////
-
-/**
- * A single line of help text.
- */
-struct help_text {
-  char const *text;                     ///< Generic text.
-  char const *cpp_text;                 ///< C++ specific text.
-};
-typedef struct help_text help_text_t;
-
-///////////////////////////////////////////////////////////////////////////////
-
-/**
- * The help text for "where ...".
- */
-static char const WHERE_TEXT[] =
-  "  [] = 0 or 1; * = 0 or more; + = 1 or more; {} = one of; | = alternate";
-
-// Ideally, help text should be 23 lines or less.
-
-/**
- * The help text for commands.
- */
-static help_text_t const HELP_TEXT_COMMANDS[] = {
-  { "command:", SAME_AS_C },
-  { "  cast <name> {as|into|to} <english>",
-    "  [const | dynamic | reinterpret | static] cast <name> {as|into|to} <english>" },
-  { "  declare <name> as <english> [aligned [as|to] {<number> [bytes] | <english>}]",
-    SAME_AS_C },
-  { NOT_IN_LANG,
-    "  declare <operator> as <english>" },
-  { "  define <name> as <english>", SAME_AS_C },
-  { "  explain <gibberish>", SAME_AS_C },
-  { "  { help | ? } [command[s] | english]", SAME_AS_C },
-  { "  set [<option> [= <value>] | options | <lang>]*", SAME_AS_C },
-  { "  show [<name> | [all] {predefined | user}] [[as] {english | typedef}]",
-    "  show [<name> | [all] {predefined | user}] [[as] {english | typedef | using}]" },
-  { "  typedef <gibberish>", SAME_AS_C },
-  { NOT_IN_LANG,
-    "  <scope-c> <name> [\\{ [{ <scope-c> | <typedef> | <using> } ;]* \\}]" },
-  { NOT_IN_LANG,
-    "  using <name> = <gibberish>" },
-  { "  exit | quit | q", SAME_AS_C },
-  { "gibberish: a C declaration, like \"int x\"; or cast, like \"(int)x\"",
-    "gibberish: a C\\+\\+ declaration, like \"int x\"; or cast, like \"(int)x\"" },
-  { "option: [no]alt-tokens [no]debug {di|tri|no}graphs [no]east-const",
-    SAME_AS_C },
-  { "        [no]explain-by-default [no]explicit-int[=<types>] lang=<lang>",
-    SAME_AS_C },
-  { "        [no]prompt [no]semicolon",
-    SAME_AS_C },
-  { "lang: C K&R C89 C95 C99 C11 C17 C2X C\\+\\+ C\\+\\+98 C\\+\\+03 C\\+\\+11 C\\+\\+14 C\\+\\+17 C\\+\\+20",
-    SAME_AS_C },
-  { NOT_IN_LANG,
-    "scope-c: class struct union [inline] namespace" },
-  { "", "" },
-  { "where:", SAME_AS_C },
-  { WHERE_TEXT, SAME_AS_C },
-  { NULL, NULL }
-};
-
-/**
- * The help text for pseudo-English.
- */
-static help_text_t const HELP_TEXT_ENGLISH[] = {
-  { "english:", SAME_AS_C },
-  { "  <store>* array [[static] <cv-qual>* {<number>|\\*}] of <english>",
-    "  <store>* array [<number>] of <english>" },
-  { "  <store>* variable [length] array <cv-qual>* of <english>", NOT_IN_LANG },
-  { NOT_IN_LANG,
-    "  <store>+ constructor [([<args>])]" },
-  { NOT_IN_LANG,
-    "  [virtual] destructor" },
-  { "  <store>* function [([<args>])] [returning <english>]",
-    "  <store>* <fn-qual>* [[non-]member] function [([<args>])] [returning <english>]" },
-  { NOT_IN_LANG,
-    "  <store>* <fn-qual>* [[non-]member] operator [([<args>])] [returning <english>]" },
-  { "  <cv-qual>* pointer to <english>",
-    "  <cv-qual>* pointer to [member of { class | struct } <name>] <english>" },
-  { "  { enum | struct | union } <name>",
-    "  { enum [class|struct] | class | struct | union } <name>" },
-  { NOT_IN_LANG,
-    "  [rvalue] reference to <english>" },
-  { NOT_IN_LANG,
-    "  user-defined conversion [operator] [of <scope-e> <name>]* returning <english>" },
-  { "  block [([<args>])] [returning <english>]",
-    "  user-defined literal [([<args>])] [returning <english>]" },
-  { "  <store>* <modifier>* [<C-type>]",
-    "  <store>* <modifier>* [<C\\+\\+-type>]" },
-  { "args: a comma separated list of <name>, <english>, or <name> as <english>",
-    "args: a comma separated list of <english> or <name> as <english>" },
-  { "C-type: bool char char16_t char32_t wchar_t int float double void",
-    "C\\+\\+-type: bool char char8_t char16_t char32_t wchar_t int float double void" },
-  { "cv-qual: _Atomic const restrict volatile",
-    "cv-qual: const volatile" },
-  { NOT_IN_LANG,
-    "fn-qual: const volatile [rvalue] reference" },
-  { "modifier: short long signed unsigned atomic const restrict volatile",
-    "modifier: short long signed unsigned const volatile" },
-  { "name: a C identifier",
-    "name: a C\\+\\+ identifier; or <name>[::<name>]* or <name> [of <scope-e> <name>]*" },
-  { NOT_IN_LANG,
-    "scope-e: scope class struct union [inline] namespace" },
-  { "store: auto extern register static thread_local",
-    "store: const{eval|expr} extern friend mutable static thread_local [pure] virtual" },
-  { "", "" },
-  { "where:", SAME_AS_C },
-  { WHERE_TEXT, SAME_AS_C },
-  { NULL, NULL }
-};
+// local functions
+static void print_help_where( void );
 
 ////////// local functions ////////////////////////////////////////////////////
-
-/**
- * Checks whether \a c is a title character.
- *
- * @param c The character to check.
- * @return Returns `true` only if \a c is a title character.
- */
-PJL_WARN_UNUSED_RESULT
-static bool is_title_char( char c ) {
-  switch ( c ) {
-    case '+':
-    case '-':
-    case '\\':
-      return true;
-    default:
-      return isalpha( c );
-  } // switch
-}
 
 /**
  * Checks whether the string \a s is a title.
@@ -188,10 +58,17 @@ static bool is_title( char const *s ) {
   assert( s != NULL );
   if ( isalpha( *s ) ) {
     while ( *++s != '\0' ) {
-      if ( *s == ':' )
-        return true;
-      if ( !is_title_char( *s ) )
-        break;
+      switch ( *s ) {
+        case ':':
+          return true;
+        case '+':
+        case '-':
+        case '\\':
+          break;
+        default:
+          if ( !isalpha( *s ) )
+            return false;
+      } // switch
     } // while
   }
   return false;
@@ -202,7 +79,7 @@ static bool is_title( char const *s ) {
  *
  * @param line The line to print.
  */
-static void print_help_line( char const *line ) {
+static void print_h( char const *line ) {
   assert( line != NULL );
 
   bool is_escaped = false;              // was preceding char a '\'?
@@ -255,25 +132,227 @@ static void print_help_line( char const *line ) {
     PUTC_OUT( *s );
     is_escaped = false;
   } // for
-  PUTC_OUT( '\n' );
 }
 
-static void print_help_text( help_text_t const *help ) {
-  assert( help != NULL );
-  bool const is_cpp = C_LANG_IS_CPP();
+/**
+ * Prints the help for commands.
+ */
+static void print_help_commands( void ) {
+  print_h( "command:\n" );
 
-  for ( ; help->text != NULL; ++help ) {
-    if ( is_cpp ) {
-      if ( help->cpp_text == NOT_IN_LANG )
-        continue;
-      if ( help->cpp_text != SAME_AS_C ) {
-        print_help_line( help->cpp_text );
-        continue;
-      }
+  print_h( "  " );
+  if ( C_LANG_IS_CPP() )
+    print_h( "[const | dynamic | reinterpret | static] " );
+  print_h( "cast <name> {as|into|to} <english>\n" );
+
+  print_h( "  declare <name> as <english>" );
+  if ( C_LANG_IS(C_CPP_MIN(11,11)) )
+    print_h( " [aligned [as|to] {<number> [bytes] | <english>}]" );
+  print_h( "\n" );
+
+  if ( C_LANG_IS_CPP() )
+    print_h( "  declare <operator> as <english>\n" );
+
+  print_h( "  define <name> as <english>\n" );
+  print_h( "  explain <gibberish>\n" );
+  print_h( "  { help | ? } [command[s] | english]\n" );
+  print_h( "  set [<option> [= <value>] | options | <lang>]*\n" );
+
+  print_h( "  show [<name> | [all] {predefined | user}] [[as] {english | typedef" );
+  if ( C_LANG_IS(MIN(CPP_11)) )
+    print_h( " | using" );
+  print_h( "}]\n" );
+
+  print_h( "  typedef <gibberish>\n" );
+
+  if ( C_LANG_IS_CPP() ) {
+    print_h( "  <scope-c> <name> [\\{ [{ <scope-c> | <typedef>" );
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( " | <using>" );
+    print_h( " } ;]* \\}]\n" );
+  }
+
+  if ( C_LANG_IS(MIN(CPP_11)) )
+    print_h( "  using <name> = <gibberish>\n" );
+
+  print_h( "  exit | quit | q\n" );
+
+  print_h( "gibberish: a C" );
+  if ( C_LANG_IS_CPP() )
+    print_h( "\\+\\+" );
+  print_h( " declaration, like \"int x\"; or cast, like \"(int)x\"\n" );
+
+  print_h( "option: [no]alt-tokens [no]debug {di|tri|no}graphs [no]east-const\n" );
+  print_h( "        [no]explain-by-default [no]explicit-int[=<types>] lang=<lang>\n" );
+  print_h( "        [no]prompt [no]semicolon\n" );
+
+  print_h( "lang: C K&R C89 C95 C99 C11 C17 C2X C\\+\\+ C\\+\\+98 C\\+\\+03 C\\+\\+11 C\\+\\+14 C\\+\\+17 C\\+\\+20\n" );
+
+  if ( C_LANG_IS_CPP() ) {
+    print_h( "scope-c: class struct union" );
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( " [inline]" );
+    print_h( " namespace\n" );
+  }
+
+  print_help_where();
+}
+
+/**
+ * Prints the help for pseudo English.
+ */
+static void print_help_english( void ) {
+  print_h( "english:\n" );
+
+  if ( C_LANG_IS_C() ) {
+    if ( C_LANG_IS(MAX(C_89)) ) {
+      print_h( "  <store>* array [<number>] of <english>\n" );
+    } else {
+      print_h( "  <store>* array [[static] <cv-qual>* {<number>|\\*}] of <english>\n" );
+      print_h( "  <store>* variable [length] array <cv-qual>* of <english>\n" );
     }
-    if ( help->text != NOT_IN_LANG )
-      print_help_line( help->text );
-  } // for
+    print_h( "  <store>* function [([<args>])] [returning <english>]\n" );
+    print_h( "  " );
+    if ( C_LANG_IS(MIN(C_89)) )
+      print_h( "<cv-qual>* " );
+    print_h( "pointer to <english>\n" );
+  }
+  else {
+    print_h( "  <store>* array [<number>] of <english>\n" );
+    print_h( "  <store>+ constructor [([<args>])]\n" );
+    print_h( "  [virtual] destructor\n" );
+    print_h( "  <store>* <fn-qual>* [[non-]member] function [([<args>])] [returning <english>]\n" );
+    print_h( "  <store>* <fn-qual>* [[non-]member] operator [([<args>])] [returning <english>]\n" );
+    print_h( "  <cv-qual>* pointer to [member of { class | struct } <name>] <english>\n" );
+  }
+
+  print_h( "  { " );
+  if ( C_LANG_IS(MIN(C_89)) ) {
+    print_h( "enum " );
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( "[class|struct] " );
+    print_h( "| " );
+    if ( C_LANG_IS_CPP() )
+      print_h( "class | " );
+  }
+  print_h( "struct | union } <name>\n" );
+
+  if ( C_LANG_IS_C() ) {
+    print_h( "  block [([<args>])] [returning <english>]\n" );
+    print_h( "  <store>* <modifier>* [<C-type>]\n" );
+
+    print_h( "args: a comma separated list of " );
+    if ( C_LANG_IS(C_KNR) )
+      print_h( "<name>\n" );
+    else if ( C_LANG_IS(C_MAX(17)) )
+      print_h( "<name>, <english>, or <name> as <english>\n" );
+    else
+      print_h( "<english> or <name> as <english>\n" );
+
+    print_h( "C-type:" );
+    if ( C_LANG_IS(MIN(C_99)) )
+      print_h( " bool" );
+    print_h( " char" );
+    if ( C_LANG_IS(MIN(C_11)) )
+      print_h( " char16_t char32_t" );
+    if ( C_LANG_IS(MIN(C_95)) )
+      print_h( " wchar_t" );
+    print_h( " int float double" );
+    if ( C_LANG_IS(MIN(C_89)) )
+      print_h( " void" );
+    print_h( "\n" );
+
+    if ( C_LANG_IS(MIN(C_89)) ) {
+      print_h( "cv-qual:" );
+      if ( C_LANG_IS(MIN(C_11)) )
+        print_h( " _Atomic" );
+      print_h( " const" );
+      if ( C_LANG_IS(MIN(C_99)) )
+        print_h( " restrict" );
+      print_h( " volatile\n" );
+    }
+
+    print_h( "modifier:" );
+    if ( C_LANG_IS(MIN(C_11)) )
+      print_h( " _Atomic" );
+    print_h( " short" );
+    if ( C_LANG_IS(MIN(C_89)) )
+      print_h( " signed" );
+    print_h( " long unsigned" );
+    if ( C_LANG_IS(MIN(C_89)) )
+      print_h( " const" );
+    if ( C_LANG_IS(MIN(C_99)) )
+      print_h( " restrict" );
+    if ( C_LANG_IS(MIN(C_89)) )
+      print_h( " volatile" );
+    print_h( "\n" );
+
+    print_h( "name: a C identifier\n" );
+    print_h( "store: auto extern register static" );
+    if ( C_LANG_IS(MIN(C_11)) )
+      print_h( " thread_local" );
+    print_h( "\n" );
+  }
+  else {
+    print_h( "  " );
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( "[rvalue] " );
+    print_h( "reference to <english>\n" );
+
+    print_h( "  user-defined conversion [operator] [of <scope-e> <name>]* returning <english>\n" );
+
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( "  user-defined literal [([<args>])] [returning <english>]\n" );
+
+    print_h( "  <store>* <modifier>* [<C\\+\\+-type>]\n" );
+    print_h( "args: a comma separated list of <english> or <name> as <english>\n" );
+
+    print_h( "C\\+\\+-type: bool char" );
+    if ( C_LANG_IS(MIN(CPP_20)) )
+      print_h( " char8_t" );
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( " char16_t char32_t" );
+    print_h( " wchar_t int float double void\n" );
+
+    print_h( "cv-qual: const volatile\n" );
+
+    print_h( "fn-qual: const volatile" );
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( " [rvalue] reference" );
+    print_h( "\n" );
+
+    print_h( "modifier: short long signed unsigned const volatile\n" );
+    print_h( "name: a C\\+\\+ identifier; or <name>[::<name>]* or <name> [of <scope-e> <name>]*\n" );
+
+    print_h( "scope-e: scope class struct union" );
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( " [inline]" );
+    print_h( " namespace\n" );
+
+    print_h( "store: const" );
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( "[" );
+    if ( C_LANG_IS(MIN(CPP_20)) )
+      print_h( "eval|" );
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( "expr" );
+    if ( C_LANG_IS(MIN(CPP_20)) )
+      print_h( "|init" );
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( "]" );
+    print_h( " extern friend mutable static" );
+    if ( C_LANG_IS(MIN(CPP_11)) )
+      print_h( " thread_local" );
+    print_h( "\n" );
+    print_h( "       [pure] virtual\n" );
+  }
+
+  print_help_where();
+}
+
+static void print_help_where( void ) {
+  print_h( "where:\n" );
+  print_h( "  [] = 0 or 1; * = 0 or more; + = 1 or more; {} = one of; | = alternate\n" );
 }
 
 ////////// extern functions ///////////////////////////////////////////////////
@@ -289,11 +368,11 @@ void print_help( char const *what ) {
 
   // The == works because the parser gaurantees specific string literals.
   if ( what == L_DEFAULT || what == L_COMMANDS ) {
-    print_help_text( HELP_TEXT_COMMANDS );
+    print_help_commands();
     return;
   }
   if ( what == L_ENGLISH ) {
-    print_help_text( HELP_TEXT_ENGLISH );
+    print_help_english();
     return;
   }
   UNEXPECTED_STR_VALUE( what );
