@@ -1,21 +1,20 @@
 command:
   [const | dynamic | reinterpret | static] cast <name> {as|into|to} <english>
-  declare <name> as <english> [aligned [as|to] {<number> [bytes] | <english>}]
+  declare <name> as <english>
   declare <operator> as <english>
   define <name> as <english>
   explain <gibberish>
   { help | ? } [command[s] | english]
   set [<option> [= <value>] | options | <lang>]*
-  show [<name> | [all] {predefined | user}] [[as] {english | typedef | using}]
+  show [<name> | [all] {predefined | user}] [[as] {english | typedef}]
   typedef <gibberish>
-  <scope-c> <name> [{ [{ <scope-c> | <typedef> | <using> } ;]* }]
-  using <name> = <gibberish>
+  <scope-c> <name> [{ [{ <scope-c> | <typedef> } ;]* }]
   exit | quit | q
 gibberish: a C++ declaration, like "int x"; or cast, like "(int)x"
 option: [no]alt-tokens [no]debug {di|tri|no}graphs [no]east-const
         [no]explain-by-default [no]explicit-int[=<types>] lang=<lang>
         [no]prompt [no]semicolon
 lang: C K&R C89 C95 C99 C11 C17 C2X C++ C++98 C++03 C++11 C++14 C++17 C++20
-scope-c: class struct union [inline] namespace
+scope-c: class struct union namespace
 where:
   [] = 0 or 1; * = 0 or more; + = 1 or more; {} = one of; | = alternate
