@@ -6,12 +6,11 @@ english:
   { enum | struct | union } <name>
   block [([<args>])] [returning <english>]
   <store>* <modifier>* [<C-type>]
-args: a comma separated list of <name>, <english>, or <name> as <english>
+args: a comma separated list of <english> or <name> as <english>
 C-type: bool char char16_t char32_t wchar_t int float double void
 cv-qual: _Atomic const restrict volatile
-modifier: short long signed unsigned atomic const restrict volatile
+modifier: _Atomic short signed long unsigned const restrict volatile
 name: a C identifier
 store: auto extern register static thread_local
-
 where:
   [] = 0 or 1; * = 0 or more; + = 1 or more; {} = one of; | = alternate
