@@ -1,0 +1,15 @@
+english:
+  <store>* array [<number>] of <english>
+  <store>* function [([<args>])] [returning <english>]
+  <cv-qual>* pointer to <english>
+  { enum | struct | union } <name>
+  block [([<args>])] [returning <english>]
+  <store>* <modifier>* [<C-type>]
+args: a comma separated list of <name>, <english>, or <name> as <english>
+C-type: char int float double void
+cv-qual: const volatile
+modifier: short signed long unsigned const volatile
+name: a C identifier
+store: auto extern register static
+where:
+  [] = 0 or 1; * = 0 or more; + = 1 or more; {} = one of; | = alternate
