@@ -1,0 +1,14 @@
+english:
+  <store>* array [<number>] of <english>
+  <store>* function [([<args>])] [returning <english>]
+  pointer to <english>
+  { struct | union } <name>
+  block [([<args>])] [returning <english>]
+  <store>* <modifier>* [<C-type>]
+args: a comma separated list of <name>
+C-type: char int float double
+modifier: short long unsigned
+name: a C identifier
+store: auto extern register static
+where:
+  [] = 0 or 1; * = 0 or more; + = 1 or more; {} = one of; | = alternate
