@@ -1,0 +1,1 @@
+cdecl @ @ -xc++03 @ help command @ 0
