@@ -1,0 +1,1 @@
+cdecl @ @ -xknr @ help english @ 0
